correct alignment of spots left tag

--- a/src/components/Content/signups/SignupForm.css
+++ b/src/components/Content/signups/SignupForm.css
@@ -24,6 +24,7 @@
 }
 .spotsLeftTag {
     float: right;
+    margin-right: 0;
 }
 .trainingSignupRadioGroup {
     width: 100%;
